Update cmavsdk, using the non-breaking version of protoc-gen-mavsdk

--- a/templates/file.py.j2
+++ b/templates/file.py.j2
@@ -62,12 +62,12 @@ class {{ struct.name.upper_camel_case }}CStruct(ctypes.Structure):
         ("{{ field.name.lower_snake_case }}", ctypes.c_int),
           {% else %}
             {% if field.type_info.is_repeated %}
-        ("{{ field.name.lower_snake_case }}", ctypes.POINTER({{ field.type_info.inner_name.upper_camel_case }}CStruct)),
+        ("{{ field.name.lower_snake_case }}", ctypes.POINTER({{ field.type_info.inner_name }}CStruct)),
         ("{{ field.name.lower_snake_case }}_size", ctypes.c_size_t),
             {% elif field.type_info.parent_type %}
         ("{{ field.name.lower_snake_case }}", ctypes.c_int),
             {% else %}
-        ("{{ field.name.lower_snake_case }}", {{ field.type_info.name.upper_camel_case }}CStruct),
+        ("{{ field.name.lower_snake_case }}", {{ field.type_info.name }}CStruct),
             {% endif %}
           {% endif %}
         {% endfor %}
@@ -121,17 +121,17 @@ class {{ struct.name.upper_camel_case }}:
             {% endif %}
           {% elif field.type_info.is_enum %}
         {# Convert C enum to Python enum #}
-        instance.{{ field.name.lower_snake_case }} = {% if field.type_info.parent_type %}{{ field.type_info.parent_type.upper_camel_case }}.{% endif %}{{ field.type_info.name.upper_camel_case }}(c_struct.{{ field.name.lower_snake_case }})
+        instance.{{ field.name.lower_snake_case }} = {% if field.type_info.parent_type %}{{ field.type_info.parent_type }}.{% endif %}{{ field.type_info.name }}(c_struct.{{ field.name.lower_snake_case }})
           {% else %}
             {% if field.type_info.is_repeated %}
         {# Convert array of C structs to Python objects #}
         if c_struct.{{ field.name.lower_snake_case }}_size > 0:
-            instance.{{ field.name.lower_snake_case }} = [{{ field.type_info.inner_name.upper_camel_case }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }}[i]) for i in range(c_struct.{{ field.name.lower_snake_case }}_size)]
+            instance.{{ field.name.lower_snake_case }} = [{{ field.type_info.inner_name }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }}[i]) for i in range(c_struct.{{ field.name.lower_snake_case }}_size)]
         else:
             instance.{{ field.name.lower_snake_case }} = []
             {% else %}
         {# Convert nested C struct to Python object #}
-        instance.{{ field.name.lower_snake_case }} = {{ field.type_info.name.upper_camel_case }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }})
+        instance.{{ field.name.lower_snake_case }} = {{ field.type_info.name }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }})
             {% endif %}
           {% endif %}
         {% endfor %}
@@ -158,11 +158,11 @@ class {{ struct.name.upper_camel_case }}:
           {% else %}
             {% if field.type_info.is_repeated %}
         {# Convert list of Python objects to C array #}
-        array_type = {{ field.type_info.inner_name.upper_camel_case }}CStruct * len(self.{{ field.name.lower_snake_case }})
+        array_type = {{ field.type_info.inner_name }}CStruct * len(self.{{ field.name.lower_snake_case }})
         c_array = array_type()
         for i, item in enumerate(self.{{ field.name.lower_snake_case }}):
             c_array[i] = item.to_c_struct()
-        c_struct.{{ field.name.lower_snake_case }} = ctypes.cast(c_array, ctypes.POINTER({{ field.type_info.inner_name.upper_camel_case }}CStruct))
+        c_struct.{{ field.name.lower_snake_case }} = ctypes.cast(c_array, ctypes.POINTER({{ field.type_info.inner_name }}CStruct))
         c_struct.{{ field.name.lower_snake_case }}_size = len(self.{{ field.name.lower_snake_case }})
             {% else %}
         {# Convert nested Python object to C struct #}
@@ -244,7 +244,7 @@ class {{ plugin_name.upper_camel_case }}:
                 py_data = c_data
                   {% elif method.return_type.is_enum %}
                   {# Enum types - convert from int to enum #}
-                py_data = {{ method.return_type.inner_name.upper_camel_case }}(c_data)
+                py_data = {{ method.return_type.inner_name }}(c_data)
                   {% else %}
                   {# Struct types - convert from CStruct #}
                     {% if method.return_type.is_repeated %}
@@ -252,16 +252,16 @@ class {{ plugin_name.upper_camel_case }}:
                 py_data = []
                 if c_data and size.value > 0:
                     for i in range(size.value):
-                        py_data.append({{ method.return_type.inner_name.upper_camel_case }}.from_c_struct(c_data[i]))
+                        py_data.append({{ method.return_type.inner_name }}.from_c_struct(c_data[i]))
                     {% else %}
-                py_data = {{ method.return_type.inner_name.upper_camel_case }}.from_c_struct(c_data)
+                py_data = {{ method.return_type.inner_name }}.from_c_struct(c_data)
                     {% endif %}
 
                     {# Destroy C struct #}
                     {% if method.return_type.is_repeated %}
-                self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name.lower_snake_case }}_destroy(c_data)
+                self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name }}_destroy(c_data)
                     {% else %}
-                self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name.lower_snake_case }}_destroy(ctypes.byref(c_data))
+                self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name }}_destroy(ctypes.byref(c_data))
                     {% endif %}
                   {% endif %}
                 {% endif %}
@@ -312,13 +312,13 @@ class {{ plugin_name.upper_camel_case }}:
         {# Prepare output parameters based on return type #}
         {% if method.return_name %}
           {% if method.return_type.is_repeated %}
-        result_ptr = ctypes.POINTER({{ method.return_type.inner_name.upper_camel_case }}CStruct)()
+        result_ptr = ctypes.POINTER({{ method.return_type.inner_name }}CStruct)()
         size = ctypes.c_size_t()
           {% else %}
             {% if method.return_type.is_primitive %}
         result_out = ctypes.{{ method.return_type.inner_name }}()
             {% else %}
-        result_out = {{ method.return_type.inner_name.upper_camel_case }}CStruct()
+        result_out = {{ method.return_type.inner_name }}CStruct()
             {% endif %}
           {% endif %}
         {% endif %}
@@ -371,16 +371,16 @@ class {{ plugin_name.upper_camel_case }}:
         {% if method.return_name %}
           {% if method.return_type.is_repeated %}
         {# Convert C array to Python list #}
-        py_result = [{{ method.return_type.inner_name.upper_camel_case }}.from_c_struct(result_ptr[i]) for i in range(size.value)]
-        self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name.lower_snake_case }}_destroy(result_ptr)
+        py_result = [{{ method.return_type.inner_name }}.from_c_struct(result_ptr[i]) for i in range(size.value)]
+        self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name }}_destroy(result_ptr)
         return py_result
           {% else %}
             {% if method.return_type.is_primitive %}
         return result_out.value
             {% else %}
         {# Convert to pure Python object #}
-        py_result = {{ method.return_type.inner_name.upper_camel_case }}.from_c_struct(result_out)
-        self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name.lower_snake_case }}_destroy(ctypes.byref(result_out))
+        py_result = {{ method.return_type.inner_name }}.from_c_struct(result_out)
+        self._lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.return_type.inner_name }}_destroy(ctypes.byref(result_out))
         return py_result
             {% endif %}
           {% endif %}
@@ -415,10 +415,10 @@ class {{ plugin_name.upper_camel_case }}:
     ctypes.c_int,
       {% else %}
         {% if method.return_type.is_repeated %}
-    ctypes.POINTER({{ method.return_type.inner_name.upper_camel_case }}CStruct),
+    ctypes.POINTER({{ method.return_type.inner_name }}CStruct),
     ctypes.c_size_t,
         {% else %}
-    {{ method.return_type.inner_name.upper_camel_case }}CStruct,
+    {{ method.return_type.inner_name }}CStruct,
         {% endif %}
       {% endif %}
     {% endif %}
@@ -436,10 +436,10 @@ _cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_destroy.restype = None
 
 {% for struct in structs %}
   {% if not struct.name.upper_camel_case.endswith('Result') %}
-_cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ struct.name.lower_snake_case }}_destroy.argtypes = [
+_cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ struct.name.upper_camel_case }}_destroy.argtypes = [
     ctypes.POINTER({{ struct.name.upper_camel_case }}CStruct)
 ]
-_cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ struct.name.lower_snake_case }}_destroy.restype = None
+_cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ struct.name.upper_camel_case }}_destroy.restype = None
 
   {% endif %}
 {% endfor %}
@@ -453,7 +453,7 @@ _cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}{% if method.is_stream and
         {% if param.type_info.is_primitive %}
     ctypes.POINTER(ctypes.{{ param.type_info.inner_name }}),
         {% else %}
-    ctypes.POINTER({{ param.type_info.inner_name.upper_camel_case }}CStruct),
+    ctypes.POINTER({{ param.type_info.inner_name }}CStruct),
         {% endif %}
     ctypes.c_size_t,
       {% elif param.type_info.is_primitive %}
@@ -463,7 +463,7 @@ _cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}{% if method.is_stream and
       {% elif param.type_info.parent_type %}
     ctypes.c_int,
       {% else %}
-    {{ param.type_info.name.upper_camel_case }}CStruct,
+    {{ param.type_info.name }}CStruct,
       {% endif %}
     {% endfor %}
     {{ method.name.upper_camel_case }}Callback,
@@ -491,7 +491,7 @@ _cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.name.lower_snak
         {% if param.type_info.is_primitive %}
     ctypes.POINTER(ctypes.{{ param.type_info.inner_name }}),
         {% else %}
-    ctypes.POINTER({{ param.type_info.inner_name.upper_camel_case }}CStruct),
+    ctypes.POINTER({{ param.type_info.inner_name }}CStruct),
         {% endif %}
     ctypes.c_size_t,
       {% elif param.type_info.is_primitive %}
@@ -501,19 +501,19 @@ _cmavsdk_lib.mavsdk_{{ plugin_name.lower_snake_case }}_{{ method.name.lower_snak
       {% elif param.type_info.parent_type %}
     ctypes.c_int,
       {% else %}
-    {{ param.type_info.name.upper_camel_case }}CStruct,
+    {{ param.type_info.name }}CStruct,
       {% endif %}
     {% endfor %}
     {% if method.return_name %}
       {% if method.return_type.is_repeated %}
-    ctypes.POINTER(ctypes.POINTER({{ method.return_type.inner_name.upper_camel_case }}CStruct)),
+    ctypes.POINTER(ctypes.POINTER({{ method.return_type.inner_name }}CStruct)),
     ctypes.POINTER(ctypes.c_size_t)
       {% elif method.return_type.is_primitive %}
     ctypes.POINTER(ctypes.{{ method.return_type.name }})
       {% elif method.return_type.is_enum %}
     ctypes.POINTER(ctypes.c_int)
       {% else %}
-    ctypes.POINTER({{ method.return_type.inner_name.upper_camel_case }}CStruct)
+    ctypes.POINTER({{ method.return_type.inner_name }}CStruct)
       {% endif %}
     {% endif %}
 ]
